<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_reflow">


    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.bagha.echomemory.ui.AddMemory.AddMemoryFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_add_memory" />

    <fragment
        android:id="@+id/nav_transform"
        android:name="com.bagha.echomemory.ui.ListMemory.ListOFMemoryFragment"
        android:label="@string/menu_transform"
        tools:layout="@layout/fragment_transform" >
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bagha.echomemory.ui.PlayMemory.PalyMemoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

   <!-- <fragment
        android:id="@+id/nav_settings"
        android:name="com.bagha.echomemoryui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />-->
</navigation>