<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMemory.AddMemoryFragment"
    >

    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/fab_content_description"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="MissingConstraints"
        />-->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Chronometer
                android:id="@+id/Chronometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewShowMessageForFirstOpenApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                style="@style/cardView"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/textView"
                    android:layout_margin="@dimen/marginStartEnd"
                    android:text="@string/recordMemoryText"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/TextViewChornometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold"
                android:text="00:00:00"/>

            <include
                android:id="@+id/viewForWavSound"
                layout="@layout/view_for_wav_sound" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/AppCompatImageViewPlay"
                    android:layout_width="@dimen/iconePalyer"
                    android:layout_height="@dimen/iconePalyer"
                    android:src="@drawable/play"
                    android:tint="@color/gray"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/iconePalyerCircleBtn"
                    android:layout_height="@dimen/iconePalyerCircleBtn"
                    android:layout_gravity="center"
                    app:cardCornerRadius="100dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:gravity="center"
                        >
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/AppCompatImageViewRecord"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/iconePalyer"
                            android:src="@drawable/microphone"
                            android:tint="@color/red"
                            android:layout_gravity="center"
                            android:adjustViewBounds="true"
                            />
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/AppCompatImageViewPause"
                            android:layout_width="@dimen/iconePalyerPause"
                            android:layout_height="@dimen/iconePalyerPause"
                            android:src="@drawable/pause"
                            android:tint="@color/gray"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/AppCompatImageViewStop"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/stop"
                    android:tint="@color/gray"
                    />

            </LinearLayout>

            <!--choose title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chooseMemoryTitle"
                    style="@style/textView"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/minHeightBTN"
                    android:layout_weight="1"
                    style="@style/cardView_grayLight"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    >
                    <Spinner
                        android:id="@+id/SpinnerMemoryList"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/minTouch"
                        android:layout_gravity="center"
                        android:layout_margin="7dp"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <!--choose image-->
            <androidx.cardview.widget.CardView
                android:id="@+id/CardViewAddImageToAlbumBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/minHeightBTN"
                style="@style/cardView_grayLight"
                app:cardBackgroundColor="@color/teal_200"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:padding="7dp"
                    >
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/icon_size_25"
                        android:layout_height="@dimen/icon_size_25"
                        app:srcCompat="@drawable/ic_camera_black_24dp"
                        style="@style/imageView"
                        app:tint="@color/white"
                        android:layout_gravity="top"
                        />

                    <TextView
                        style="@style/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/makePhotoAlbum"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

           <include
               android:id="@+id/makeImageAlbum"
               layout="@layout/custom_recyclerview_for_make_image_album"
               />

            <Button
                android:id="@+id/ButtonAddNewMemoryWithVoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addMemory"
                style="@style/button"
                android:layout_margin="10dp"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"/>
        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>